--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : jfouchard
+  username               : "jfouchard"
 facebook:
   username               :
   app_id                 :
