--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 title                    : "fouchard.org"
-title_separator          : ""
+title_separator          : " - "
 name                     : "Jeff Fouchard"
 description              : ""
 url                      : "//jfouchard.github.io"
@@ -204,3 +204,11 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      author_profile: true
